fix text alignment on quest page

--- a/site/src/pages/questPage.css
+++ b/site/src/pages/questPage.css
@@ -51,6 +51,7 @@
 .questContent h2 {
     font-size: 2em;
     margin: unset;
+    text-align: center;
 }
 
 @media (min-width: 1440px) {
